Implementeret Async, med nye ord fra DR

--- a/app/src/main/res/layout/activity_hangmanspil.xml
+++ b/app/src/main/res/layout/activity_hangmanspil.xml
@@ -11,8 +11,8 @@
         android:id="@+id/GoButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="178dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="106dp"
+        android:layout_marginBottom="181dp"
         android:text="Go!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,24 +23,22 @@
         android:id="@+id/usedLettersField"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="33dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="36dp"
         android:maxLength="100"
         android:text=""
         android:textAppearance="@android:style/TextAppearance.Medium"
         app:layout_constraintBottom_toTopOf="@+id/showWord"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Picture"
+        app:layout_constraintEnd_toEndOf="@+id/headerBBogstaver"
+        app:layout_constraintStart_toStartOf="@+id/headerBBogstaver"
         app:layout_constraintTop_toBottomOf="@+id/headerBBogstaver" />
 
     <EditText
         android:id="@+id/inputField"
         style="@android:style/TextAppearance.Large"
         android:layout_width="0dp"
-        android:layout_height="49dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="128dp"
         android:layout_marginBottom="181dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="132dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,42 +50,54 @@
         android:id="@+id/headerBBogstaver"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginEnd="13dp"
+        android:layout_marginBottom="6dp"
         android:gravity="center"
         android:text="Brugte bogstaver"
         android:textAppearance="@android:style/TextAppearance.Medium"
         app:layout_constraintBottom_toTopOf="@+id/usedLettersField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Picture"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/newWords" />
 
     <TextView
         android:id="@+id/showWord"
-        android:layout_width="227dp"
-        android:layout_height="33dp"
-        android:layout_marginBottom="12dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
         android:gravity="center"
         android:text="_ _ _ _ _ _"
         android:textAppearance="@android:style/TextAppearance.Large"
         app:layout_constraintBottom_toTopOf="@+id/GoButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/usedLettersField" />
 
     <ImageView
         android:id="@+id/Picture"
-        android:layout_width="0dp"
+        android:layout_width="202dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="74dp"
-        android:layout_marginEnd="7dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="85dp"
         app:layout_constraintBottom_toTopOf="@+id/inputField"
-        app:layout_constraintEnd_toStartOf="@+id/usedLettersField"
+        app:layout_constraintEnd_toStartOf="@+id/newWords"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/newWords"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="27dp"
+        android:text="Nye ord"
+        app:layout_constraintBottom_toTopOf="@+id/headerBBogstaver"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Picture"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
