--- a/app/src/main/res/layout/activity_highscore.xml
+++ b/app/src/main/res/layout/activity_highscore.xml
@@ -9,12 +9,12 @@
     <TextView
         android:id="@+id/headline_HighScore"
         android:layout_width="0dp"
-        android:layout_height="63dp"
+        android:layout_height="0dp"
         android:layout_marginTop="85dp"
-        android:layout_marginBottom="22dp"
+        android:layout_marginBottom="300dp"
         android:text="Highscore"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/textfield_HighScore"
+        app:layout_constraintBottom_toTopOf="@+id/updateButton"
         app:layout_constraintEnd_toEndOf="@+id/textfield_HighScore"
         app:layout_constraintStart_toStartOf="@+id/textfield_HighScore"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,6 +28,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headline_HighScore" />
+
+    <Button
+        android:id="@+id/updateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="71dp"
+        android:text="Update"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textfield_HighScore"
         app:layout_constraintTop_toBottomOf="@+id/headline_HighScore" />
 
 </android.support.constraint.ConstraintLayout>
