--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,17 @@
     tools:layout_editor_absoluteY="25dp">
 
 
+    <Button
+        android:id="@+id/rules_btn"
+        android:layout_width="104dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="217dp"
+        android:text="Regler"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/GoToGameButton"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.595" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="212dp"
@@ -38,7 +49,7 @@
 
     <Button
         android:id="@+id/hsButton"
-        android:layout_width="wrap_content"
+        android:layout_width="104dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="217dp"
         android:text="Highscore"
