--- a/app/src/main/res/layout/activity_hangmanspil.xml
+++ b/app/src/main/res/layout/activity_hangmanspil.xml
@@ -7,16 +7,29 @@
     tools:context=".HangManSpil"
     tools:layout_editor_absoluteY="25dp">
 
+    <Button
+        android:id="@+id/wordlistbtn"
+        android:layout_width="155dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="103dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="249dp"
+        android:text="ordliste"
+        app:layout_constraintBottom_toTopOf="@+id/llContainerVert"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Picture"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/usedLettersField"
         android:layout_width="0dp"
         android:layout_height="67dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="7dp"
         android:maxLength="100"
         android:text=""
         android:textAppearance="@android:style/TextAppearance.Medium"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/Picture"
         app:layout_constraintTop_toBottomOf="@+id/headerBBogstaver" />
 
@@ -24,18 +37,19 @@
         android:id="@+id/headerBBogstaver"
         android:layout_width="0dp"
         android:layout_height="36dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="56dp"
         android:gravity="center"
         android:text="Brugte bogstaver"
         android:textAppearance="@android:style/TextAppearance.Medium"
         app:layout_constraintEnd_toEndOf="@+id/newWords"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/newWords"
         app:layout_constraintTop_toBottomOf="@+id/newWords" />
 
     <TextView
         android:id="@+id/showWord"
         android:layout_width="0dp"
-        android:layout_height="79dp"
+        android:layout_height="50dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:layout_marginBottom="54dp"
@@ -44,23 +58,25 @@
         android:textAppearance="@android:style/TextAppearance.Large"
         app:layout_constraintBottom_toTopOf="@+id/llContainerVert"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usedLettersField" />
+        app:layout_constraintTop_toBottomOf="@+id/usedLettersField"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/Picture"
         android:layout_width="0dp"
-        android:layout_height="187dp"
+        android:layout_height="210dp"
         android:layout_marginStart="17dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toTopOf="@+id/showWord"
-        app:layout_constraintEnd_toStartOf="@+id/newWords"
+        app:layout_constraintEnd_toStartOf="@+id/wordlistbtn"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/newWords"
-        android:layout_width="0dp"
+        android:layout_width="155dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="55dp"
         android:layout_marginEnd="29dp"
@@ -68,8 +84,10 @@
         android:text="Nye ord"
         app:layout_constraintBottom_toTopOf="@+id/llContainerVert"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/Picture"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <LinearLayout
         android:id="@+id/llContainerVert"
@@ -80,7 +98,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newWords">
+        app:layout_constraintTop_toBottomOf="@+id/wordlistbtn">
 
         <LinearLayout
             android:id="@+id/row1"
