Recyclerview implementeret i highscore

--- a/app/src/main/res/layout/activity_highscore.xml
+++ b/app/src/main/res/layout/activity_highscore.xml
@@ -1,44 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Highscore">
+    tools:context=".Highscore"
+    tools:layout_editor_absoluteY="25dp">
 
     <TextView
         android:id="@+id/headline_HighScore"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="85dp"
-        android:layout_marginBottom="300dp"
+        android:layout_width="215dp"
+        android:layout_height="63dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
         android:text="Highscore"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/updateButton"
-        app:layout_constraintEnd_toEndOf="@+id/textfield_HighScore"
-        app:layout_constraintStart_toStartOf="@+id/textfield_HighScore"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textfield_HighScore"
-        android:layout_width="215dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="148dp"
-        android:text=""
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headline_HighScore" />
+        tools:layout_editor_absoluteX="85dp"
+        tools:layout_editor_absoluteY="85dp" />
 
     <Button
         android:id="@+id/updateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="71dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="74dp"
         android:text="Tilbage til hovedmenu"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textfield_HighScore"
-        app:layout_constraintTop_toBottomOf="@+id/headline_HighScore" />
+        tools:layout_editor_absoluteX="93dp"
+        tools:layout_editor_absoluteY="448dp" />
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="345dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="102dp" />
+
+</RelativeLayout>
