--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -7,11 +7,12 @@
 
     >
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/listImage"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:src="@drawable/gold"
+
         />
 
     <TextView
