--- a/app/src/main/res/layout/activity_hangmanspil.xml
+++ b/app/src/main/res/layout/activity_hangmanspil.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HangManSpil"
-    tools:layout_editor_absoluteY="25dp">
-
+    tools:layout_editor_absoluteY="25dp"
+    >
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/fireworksView"
         android:layout_width="match_parent"
